--- a/package.json
+++ b/package.json
@@ -13,8 +13,11 @@
     "react-dom": "17.0.1"
   },
   "devDependencies": {
+    "@types/jest": "^26.0.15",
     "@types/node": "^14.14.7",
     "@types/react": "^16.9.56",
+    "jest": "^26.6.3",
+    "ts-jest": "^26.4.4",
     "typescript": "^4.0.5"
   }
 }
