--- a/package.json
+++ b/package.json
@@ -17,6 +17,10 @@
     "@types/jest": "^26.0.15",
     "@types/node": "^14.14.7",
     "@types/react": "^16.9.56",
+    "babel-jest": "^26.6.3",
+    "enzyme": "^3.11.0",
+    "enzyme-adapter-react-16": "^1.15.5",
+    "identity-obj-proxy": "^3.0.0",
     "jest": "^26.6.3",
     "ts-jest": "^26.4.4",
     "typescript": "^4.0.5"
