--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "babel-jest": "^26.6.3",
     "enzyme": "^3.11.0",
     "enzyme-adapter-react-16": "^1.15.5",
+    "eslint": "^7.13.0",
     "identity-obj-proxy": "^3.0.0",
     "jest": "^26.6.3",
     "ts-jest": "^26.4.4",
