--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -23,5 +23,9 @@
       "version": "detect"
     }
   },
-  "rules": {}
+  "rules": {
+    "react/react-in-jsx-scope": "off",
+    "@typescript-eslint/explicit-module-boundary-types": "off",
+    "react/prop-types": "off"
+  }
 }
