--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "test": "jest"
+    "test": "jest",
+    "lint": "eslint src/ --ext .ts,.tsx & eslint test/ --ext .ts,.tsx",
+    "lint:fix": "eslint src/ --ext .ts,.tsx --fix & eslint test/ --ext .ts,.tsx --fix"
   },
   "dependencies": {
     "next": "10.0.1",
