--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "jest": "^26.6.3",
     "prettier": "^2.1.2",
     "ts-jest": "^26.4.4",
+    "ts-node": "^9.0.0",
     "typescript": "^4.0.5"
   }
 }
